syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "/msgs;msgs";

// Raven訊息資料, 客戶端傳送給伺服器
message RavenS {
  int32 messageID = 1; // 訊息編號, 設置為int32以跟proto的列舉類型統一
  google.protobuf.Any header = 2; // 標頭資料
  google.protobuf.Any request = 3; // 要求資料
}

// Raven訊息資料, 伺服器傳送給客戶端
message RavenC {
  int32 messageID = 1; // 訊息編號, 設置為int32以跟proto的列舉類型統一
  int32 errID = 2; // 錯誤編號, 設置為int32以跟proto的列舉類型統一
  google.protobuf.Any header = 3; // 標頭資料
  google.protobuf.Any request = 4; // 要求資料
  repeated google.protobuf.Any respond = 5; // 回應列表
}

// Raven訊息測試資料
message RavenTest {
  string Data = 1; // 測試字串
}
